
Changes in Version 0.9-7

  o reorder factor levels only once in latticist(), which removes
    lots of ugly reorderByFreq() from the plot calls.

  o use shingle levels for lables in strips and on axes.

  o latticist gives more error messages in dialog boxes.

  o latticist passes labels argument to playwith(), which stops it
    from trying to guess labels from the plot call each time.

Changes in Version 0.9-6

  o use of equal.count and cutEq in latticist.

  o use of useOuterStrips and layout in latticist.

Changes in Version 0.9-5

  o marginals()

  o reorderByFreq()

  o fix click-and-hold identify, to account for lattice subscripts.

  o playGetIDs() now returns subscripts into original data from
    multi-panel lattice plots (was indexing data in each panel).
    (And the internal representation is now as lattice subscripts).

Changes in Version 0.9-4

  o latticist!

  o callArg gains a logical 'eval' argument.

  o fix error when using a single argument that is a formula.

  o fix error when identifying points with univariate lattice
    plots (e.g. data$x is NULL).

  o remove effect of 'title' on choosing replacement device.

Changes in Version 0.9-3

  o recognise un-named "data" argument to formula methods
    such as plot.formula, boxplot.formula.

Changes in Version 0.9-2

  o tooltips show labels for points when click and hold mouse button.

  o improvements to basic device mode (options(device="playwith")):
    preview button in annotation tool now works; and there is an
    "undo annotation" tool, allowing last annotation to be removed.
    (still some problems with mixing base and grid graphics).

  o improved code for guessing xy coordinates and labels.

  o improved code for guessing main function (assume "plot" if found).

Changes in Version 0.9-1

  o cairoDevice package in Depends rather than Imports, since
    it sets options(device="Cairo"), which is bad if not attached!

Changes in Version 0.9-0
